--- a/Web/deploy/acr-web.yaml
+++ b/Web/deploy/acr-web.yaml
@@ -18,7 +18,7 @@ spec:
       - name: covidweb
         image: adfiksencovid19.azurecr.io/covid19model:latest
         ports:
-        - containerPort: 80
+        - containerPort: 5000
 ---
 apiVersion: v1
 kind: Service
@@ -28,5 +28,6 @@ spec:
     type: LoadBalancer
     ports:
     - port: 80
+      targetPort: 5000
     selector:
         app: covidweb
