add aad details to appsettings

--- a/service/web/appsettings.json
+++ b/service/web/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "qualified.domain.name",
+    "TenantId": "common",
+    "ClientId": "0cb87b97-7aa9-467e-88ce-691d6708b788",
+    "CallbackPath": "/signin-oidc"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
